--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
+    "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
