--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "popper.js": "^1.15.0",
+    "socket.io": "^2.2.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
